Refine and Query by Date
- Document fields modification (date added, "timestamp" -> "timeStamp")
- Firestore query minimalized  by using their built in functions with sort by date in asc.

--- a/expressjs/view/displayByDate.ejs
+++ b/expressjs/view/displayByDate.ejs
@@ -51,7 +51,7 @@
                         <td><%= message.msgContent %></td>
                     <% } %>
                     <td><%= message.messageType %></td>
-                    <td><%= message.timestamp %></td>
+                    <td><%= message.timeStamp %></td>
                 </tr>
             <% }); %>
         </tbody>
@@ -76,7 +76,7 @@
                         <td><a href="<%= message.publicUrl %>"><%= message.publicUrl %></a></td>
                     <% } %>
                     <td><%= message.messageType %></td>
-                    <td><%= message.timestamp %></td>
+                    <td><%= message.timeStamp %></td>
                 </tr>
             <% }); %>
         </tbody>
