--- a/expressjs/view/displayMessages.ejs
+++ b/expressjs/view/displayMessages.ejs
@@ -51,7 +51,7 @@
                         <td><%= message.msgContent %></td>
                     <% } %>
                     <td><%= message.messageType %></td>
-                    <td><%= message.timestamp %></td>
+                    <td><%= message.timeStamp %></td>
                 </tr>
             <% }); %>
         </tbody>
@@ -76,7 +76,7 @@
                         <td><a href="<%= message.publicUrl %>"><%= message.publicUrl %></a></td>
                     <% } %>
                     <td><%= message.messageType %></td>
-                    <td><%= message.timestamp %></td>
+                    <td><%= message.timeStamp %></td>
                 </tr>
             <% }); %>
         </tbody>
