Google IO's Flash Gemini
Using the new Flash Gemini for better responses, it is noticeably faster.

Along with configurations and history of chats and the results of generated text responses looks  pretty good!

--- a/expressjs/view/displayByDate.ejs
+++ b/expressjs/view/displayByDate.ejs
@@ -81,5 +81,9 @@
             <% }); %>
         </tbody>
     </table>
+    <h3>Text Summary By Flash Gemini:</h3>
+    <p>
+        <%= textByGem %>
+    </p>
 </body>
 </html>
